edited dockerfile and added openvla dependencies

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,7 +25,7 @@ RUN pip install --no-cache-dir -r requirements-dev.txt
 COPY . .
 
 # Install package in development mode
-RUN pip install -e .
+#RUN pip install -e .
 
 # Default command
 CMD ["python", "-c", "print('Container ready for development')"]
