--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,14 @@ services:
     stdin_open: true
     tty: true
     command: /bin/bash
+    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
 
   jupyter:
     build:
@@ -22,7 +30,16 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - "8888:8888"
+      - "8080:8080"
     volumes:
       - ../:/app
     working_dir: /app
     command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token=''
+    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
