--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ data/
 results/
 experiments/
 isaacsim-webrtc-streaming-client-*.AppImage
+isaacsim-webrtc-streaming-client-1.0.6-linux-x64.AppImage
